--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="styles/bootstrap-icons.min.css" rel="stylesheet">
   <title></title>
   <link rel="shortcut icon" type="image/x-icon" href=“logo/shortcut.png">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans|Noto+Sans+SC">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+SC">
 
 
 </head>
@@ -87,7 +87,8 @@
               <h3 class="-essays-title"></h3>
             </a>
             <ul>
-              <li><a href="rebuild.html" class="link -rebuild-title text-decoration-none" onmouseenter="MouseOnRebuild"></a>
+              <li><a href="rebuild.html" class="link -rebuild-title text-decoration-none"
+                  onmouseenter="MouseOnRebuild"></a>
               </li>
             </ul>
           </div>
@@ -119,9 +120,12 @@
               <h3 class="-composition-title"></h3>
             </a>
             <ul>
-              <li><a href="voice.html" class="link -voice-title text-decoration-none" onmouseenter="MouseOnVoice()"></a></li>
-              <li><a href="star.html" class="link -star-title text-decoration-none" onmouseenter="MouseOnStar()"></a></li>
-              <li><a href="spring.html" class="link -spring-title text-decoration-none" onmouseenter="MouseOnSpring()"></a></li>
+              <li><a href="voice.html" class="link -voice-title text-decoration-none" onmouseenter="MouseOnVoice()"></a>
+              </li>
+              <li><a href="star.html" class="link -star-title text-decoration-none" onmouseenter="MouseOnStar()"></a>
+              </li>
+              <li><a href="spring.html" class="link -spring-title text-decoration-none"
+                  onmouseenter="MouseOnSpring()"></a></li>
             </ul>
           </div>
         </div>
