--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <script>
-  alert("原Github上的网站由于访问速度原因已被废弃，我们正带你前往新的由Gitlab托管的网站！The oringal website on Github has been gave up. We are going to bring you to the new website on Gitlab!")
+  alert("原Github上的网站由于访问速度原因已被废弃，我们正带你前往新的由Gitlab托管的网站！The oringal website on Github has been given up. We are going to bring you to the new website on Gitlab!")
   window.location.replace("https://johnzhang888.gitlab.io")
 </script>
