--- a/index.html
+++ b/index.html
@@ -1,4 +1,204 @@
-<script>
-  alert("原Github上的网站由于访问速度原因已被废弃，我们正带你前往新的由Gitlab托管的网站！The oringal website on Github has been given up. We are going to bring you to the new website on Gitlab!")
-  window.location.replace("https://johnzhang888.gitlab.io")
-</script>
+<!doctype html>
+<html lang="zh-CN" data-bs-theme="light">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="keywords" content="">
+  <meta name="description" content="">
+  <link href="styles/bootstrap.min.css" rel="stylesheet">
+  <!--不要忘记更换这里的路径！-->
+  <link href="styles/main.css" rel="stylesheet">
+  <link href="styles/bootstrap-icons.min.css" rel="stylesheet">
+  <title></title>
+  <link rel="shortcut icon" type="image/x-icon" href=“logo/shortcut.png">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+SC">
+
+
+</head>
+
+<body>
+  <div id="Navbar"></div>
+  <div id="carousel" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active" aria-current="true"
+        aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="https://pic.imgdb.cn/item/66372c210ea9cb1403872d40.jpg" class="d-block w-100 carousel-image" alt="">
+        <div class="carousel-caption d-md-block">
+          <h2 class="text-white -spring-title"></h2>
+          <p class="text-white -spring-description"></p>
+          <a class="btn btn-lg btn-glass -read" href="spring.html"></a>
+          <br><br>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="https://pic.imgdb.cn/item/663791ff0ea9cb1403859b6d.png" class="d-block w-100 carousel-image" alt="">
+        <div class="carousel-caption d-md-block">
+          <h2 class="text-white -rebuild-title"></h2>
+          <p class="text-white -rebuild-description"></p>
+          <a class="btn btn-lg btn-glass -read" href="rebuild.html"></a>
+          <br><br>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="https://pic.52112.com/2019/07/23/JPG-190723_587/pdXtrNWpmz_small.jpg"
+          class="d-block w-100 carousel-image" alt="">
+        <div class="carousel-caption d-md-block">
+          <h2 class="text-white -xyes-title">XYes</h2>
+          <p class="text-white -xyes-description"></p>
+          <a class="btn btn-lg btn-glass -try" href="xyes.html"></a>
+          <br><br>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev"
+      style="background-image: linear-gradient(to right, black, transparent);">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next"
+      style="background-image: linear-gradient(to left, black, transparent);">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+
+  <br>
+  <div class="container">
+    <div class="row gx-8 gy-8">
+      <div class="col-12 col-md-6">
+        <div class="row gx-4">
+          <div class="col-4">
+            <div id="kind1-img" class="carousel slide carousel-fade" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="https://pic.imgdb.cn/item/663791ff0ea9cb1403859b6d.png" class="small-img rounded">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-8">
+            <a class="body-link" href="essays.html">
+              <h3 class="-essays-title"></h3>
+            </a>
+            <ul>
+              <li><a href="rebuild.html" class="link -rebuild-title text-decoration-none"
+                  onmouseenter="MouseOnRebuild"></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <br>
+      </div>
+
+      <div class="col-12 col-md-6">
+        <div class="row gx-4">
+          <div class="col-4">
+            <div id="kind2-img" class="carousel slide carousel-fade" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="https://pic.imgdb.cn/item/66373a8e0ea9cb1403ac65ec.jpg" class="small-img rounded">
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="https://tse2-mm.cn.bing.net/th/id/OIP-C.Uul-EqvhOLrKppSEbA8XvwAAAA?w=80&h=80&c=7&r=0&o=5&pid=1.7"
+                    class="small-img">
+                </div>
+                <div class="carousel-item">
+                  <img src="https://pic.imgdb.cn/item/66372c210ea9cb1403872d40.jpg" class="small-img rounded">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-8">
+            <a class="body-link text-decoration-none" href="compositions.html">
+              <h3 class="-composition-title"></h3>
+            </a>
+            <ul>
+              <li><a href="voice.html" class="link -voice-title text-decoration-none" onmouseenter="MouseOnVoice()"></a>
+              </li>
+              <li><a href="star.html" class="link -star-title text-decoration-none" onmouseenter="MouseOnStar()"></a>
+              </li>
+              <li><a href="spring.html" class="link -spring-title text-decoration-none"
+                  onmouseenter="MouseOnSpring()"></a></li>
+            </ul>
+          </div>
+        </div>
+        <br>
+      </div>
+
+      <div class="col-12 col-md-6">
+        <div class="row gx-4">
+          <div class="col-4">
+            <div id="tag-img" class="carousel slide carousel-fade" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="https://pic.52112.com/2019/07/23/JPG-190723_587/pdXtrNWpmz_small.jpg"
+                    class="small-img rounded">
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="https://is1-ssl.mzstatic.com/image/thumb/Purple113/v4/10/aa/5b/10aa5b33-e2e1-83ce-0422-4133002614c5/source/512x512bb.jpg"
+                    class="small-img rounded">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-8">
+            <a href="tools-and-games.html" class="body-link text-decoration-none">
+              <h3 class="-tag-title"></h3>
+            </a>
+            <ul>
+              <li><a href="xyes.html" class="link -xyes-title text-decoration-none" onmouseenter="mouseOnTag0()"></a>
+              <li><a href="spy.html" class="link -spy-title text-decoration-none" onmouseenter="mouseOnTag1()"></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <br>
+    </div>
+  </div>
+  <br><br>
+  <!--不要忘记更换这里的路径！-->
+  <script src="scripts/bootstrap.bundle.min.js"></script>
+  <script src="scripts/js.cookie.min.js"></script>
+  <script src="scripts/jquery-3.7.1.min.js"></script>
+  <script src="scripts/components.js"></script>
+  <script>
+    function otherChineseText() {
+      ci('title', 'John Zhang 的网站')
+      ci('.-too-ugly', '这破主页太丑、太抽象了，等我有时间一定做个新的！')
+    }
+    function otherEnglishText() {
+      ci('title', 'John Zhang\'s Website')
+      ci('.-too-ugly', 'The sh*t homepage is too ugly and abtract! Wait me to make a new one as sonn as I\'m free!')
+    }
+  </script>
+  <script src="scripts/language.js"></script>
+  <script src="scripts/theme.js"></script>
+  <script>
+    function MouseOnVoice() {
+      $('#kind2-img').carousel(0)
+    }
+    function MouseOnStar() {
+      $('#kind2-img').carousel(1)
+    }
+    function MouseOnSpring() {
+      $('#kind2-img').carousel(2)
+    }
+    function mouseOnTag0() {
+      $('#tag-img').carousel(0)
+    }
+    function mouseOnTag1() {
+      $('#tag-img').carousel(1)
+    }
+  </script>
+</body>
+
+</html>
