--- a/xyes.html
+++ b/xyes.html
@@ -12,7 +12,7 @@
   <link href="styles/bootstrap-icons.min.css" rel="stylesheet">
   <title class="-xyes-title"></title>
   <link rel="shortcut icon" type="image/x-icon" href=“logo/shortcut.png">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+SC">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu|Noto+Sans+SC">
 
 
 </head>
